--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,21 +1,25 @@
+{% extends "base.html" %} 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+  <div class="container header-container">
+    <div class="row">
+      <div class="col"></div>
     </div>
+  </div>
 {% endblock %}
 
 {% block content %}
-    <div class="rgba-black-light">
-      <div class="container h-100">
-        <div class="row h-100 header-container">
-          <div class="col-7 col-md-6 my-auto">
-            <h1 class="display-4 logo-font text-white">
-              Wilson's Express Sameday Ltd
-            </h1>
+  <div class="rgba-black-light">
+    <div class="container h-100">
+      <div class="row h-100 header-container">
+        <div class="col-7 col-md-6 my-auto">
+          <h1 class="display-4 logo-font text-white">
+            Wilson's Express
+          </h1>
+          <div class="my-5">
+          
           </div>
         </div>
       </div>
     </div>
+  </div>
 {% endblock %}
