main header and navbar almost complete, basic styling for responsiveness also started

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,10 +11,11 @@
   <div class="rgba-black-light">
     <div class="container h-100">
       <div class="row h-100 header-container">
-        <div class="col-7 col-md-6 my-auto">
-          <h1 class="display-4 logo-font text-white">
-            Wilson's Express
+        <div class="col-12 col-md-8 my-auto text-center text-md-left">
+          <h1 class="display-4 text-white">
+           Wilson's Express Sameday Ltd 
           </h1>
+          <h2 class="text-white">Specalists in Sameday, Next Day and International Deliveries!</h2>
           <div class="my-5">
           
           </div>
