--- a/templates/base.html
+++ b/templates/base.html
@@ -4,36 +4,38 @@
 
 <head>
   <!-- Favicon -->
-  <link rel="icon" href="#"/>
+  <link rel="icon" href="/media/favicon.png" />
   {% block meta %}
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta charset="utf-8" />
-    <meta name="description" content="Wilson's Express Sameday Store and Booking Site">
-    <meta name="keywords" content="Sameday, Courier, Wilson's Express, Wilson's, Wilson, Express, Overnight, Booking, Shop, Maidstone, Nationwide, International, Parcels, Freight, Pallets, Boxes, Packaging">
-    <meta name="author" content="Tom Jones">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta charset="utf-8" />
+  <meta name="description" content="Wilson's Express Sameday Store and Booking Site">
+  <meta name="keywords"
+    content="Sameday, Courier, Wilson's Express, Wilson's, Wilson, Express, Overnight, Booking, Shop, Maidstone, Nationwide, International, Parcels, Freight, Pallets, Boxes, Packaging">
+  <meta name="author" content="Tom Jones">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   {% endblock %}
 
   {% block extra_meta %}
   {% endblock %}
 
   {% block corecss %}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
   {% endblock %}
 
   {% block extra_css %}
   {% endblock %}
 
   {% block corejs %}
-    <script src="https://kit.fontawesome.com/8c483914fb.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-      crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/8c483914fb.js" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    crossorigin="anonymous"></script>
   {% endblock %}
 
   {% block extra_js %}
@@ -43,53 +45,49 @@
 </head>
 
 <body>
-<header class="container-fluid fixed-top">
+  <header class="container-fluid fixed-top">
+    <div id="topnav" class="row pt-lg-2 d-flex">
+      <div class="col-8 col-sm-6 py-1 py-lg-0 d-flex flex-column justify-content-between">
+        <ul class="list-inline list-unstyled text-left my-0">
+          <li class="list-inline-item dropdown">
+            <a class="nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false">
+              <div class="text-center text-white">
+                <div><i class="fas fa-user fa-lg"></i></div>
+              </div>
+            </a>
+            <div class="dropdown-menu border-0" aria-labelledby="user-options">
+              {% if request.user.is_authenticated %}
+              {% if request.user.is_superuser %}
+              <a href="" class="dropdown-item">Product Management</a>
+              {% endif %}
+              <a href="" class="dropdown-item">My Profile</a>
+              <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+              {% else %}
+              <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+              <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+              <a href="https://apc.hypaship.com/" target="_blank" rel="noopener" class="dropdown-item">Apc Hypaship Login</a>
+              {% endif %}
+            </div>
+          </li>
+        </ul>
         <div class="row">
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
-                <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <h2 class="logo-font text-black my-0"><strong>Wilson's</strong> Express</h2>
-                </a>
-            </div>
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                <form method="GET" action="">
-                    <div class="input-group w-100">
-                        <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
-                        <div class="input-group-append">
-                            <button class="form-control btn btn-black border border-black rounded-0" type="submit">
-                                <span class="icon">
-                                    <i class="fas fa-search"></i>
-                                </span>
-                            </button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-                    <li class="list-inline-item dropdown">
-                        <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <div class="text-center">
-                                <div><i class="fas fa-user fa-lg"></i></div>
-                                <p class="my-0">My Account</p>
-                            </div>
-                        </a>
-                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                            {% if request.user.is_authenticated %}
-                                {% if request.user.is_superuser %}
-                                    <a href="" class="dropdown-item">Product Management</a>
-                                {% endif %}
-                                <a href="" class="dropdown-item">My Profile</a>
-                                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                            {% else %}
-                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                            {% endif %}
-                        </div>
-                    </li>
-                </ul>
-            </div>
+        <nav class="navbar navbar-dark navbar-expand-lg navbar-light ">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+            {% include 'includes/main-nav.html' %}
+            </nav>
         </div>
-    </header>
+      </div>
+      <div class="col-4 col-sm-6 py-1 py-lg-0 d-flex justify-content-end">
+        <a href="{% url 'home' %}" class="nav-link main-logo-link">
+          <img width="300" class="logo-font text-dark my-0" src="/media/wilsons-logo-trans.png" alt="Wilson's Express">
+        </a>
+      </div>
+    </div>
+        
+  </header>
 
 
 
@@ -100,6 +98,11 @@
   {% endblock %}
 
   {% block postloadjs %}
+  <script>
+    $(function () {
+      $('[data-toggle="tooltip"]').tooltip()
+    })
+    </script>
   {% endblock %}
 </body>
 
