--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,26 +1,40 @@
-{% extends "base.html" %} 
+{% extends "base.html" %}
 {% block page_header %}
-  <div class="container header-container">
-    <div class="row">
-      <div class="col"></div>
-    </div>
+<div class="container header-container">
+  <div class="row">
+    <div class="col"></div>
   </div>
+</div>
 {% endblock %}
 
 {% block content %}
-  <div class="rgba-black-light">
-    <div class="container h-100">
-      <div class="row h-100 header-container">
-        <div class="col-12 col-md-8 my-auto text-center text-md-left">
-          <h1 class="display-4 text-white">
-           Wilson's Express Sameday Ltd 
-          </h1>
-          <h2 class="text-white">Specalists in Sameday, Next Day and International Deliveries!</h2>
-          <div class="my-5">
-          
-          </div>
+<div class="rgba-black-light">
+  <div class="container h-100">
+    <div class="row h-100 header-container">
+      <div class="col-12 col-md-8 my-auto text-center text-md-left">
+        <h1 class="text-white">
+          Wilson's Express Sameday Ltd
+        </h1>
+        <h2 class="text-white display-4 mb-5">Specalists in Sameday, Next Day and International Deliveries!</h2>
+        <hr class="separator w-100">
+        <div class="my-5">
+          <h3 class="text-white">Need to send a parcel? Open a credit account? We can help!</h3>
+          <h4>
+            <a href="#" class="shop-now-button btn btn-lg rounder-0 text-uppercase py-3 text-white">Send a
+              Parcel</a>
+            <a href="#" class="shop-now-button btn btn-lg rounder-0 text-uppercase py-3 text-white">Open a
+              Credit Account</a>
+          </h4>
+        </div>
+        <div class="my-5">
+          <h3 class="text-white">Try our new store for all your packaging needs</h3>
+          <h4>
+            <a href="#" class="shop-now-button btn btn-lg rounder-0 text-uppercase py-3 text-white">Store</a>
+          </h4>
         </div>
       </div>
     </div>
   </div>
+</div>
+</div>
 {% endblock %}
