--- a/static/css/base.css
+++ b/static/css/base.css
@@ -49,9 +49,64 @@ button.navbar-toggler {
     margin-top: 60px;
 }
 
+#topnav {
+    backdrop-filter: blur(8px);
+}
 
+.separator {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border: 0;
+    border-top: 2px solid #ffffffd7;
+}
 
+.shop-now-button {
+  color: white;
+  background-color: rgba(255, 255, 255, .15);  
+  backdrop-filter: blur(5px);
+  min-width: 260px;
+}
 
+.btn-black {
+  background-color: rgba(255, 255, 255, .15);  
+  backdrop-filter: blur(5px);
+  color: white;
+}
+
+.btn-outline-black {
+  background-color: rgba(255, 255, 255, .15);  
+  backdrop-filter: blur(5px);
+  color: black !important; /* use important to override link colors for <a> elements */
+  border: 1px solid black;
+}
+
+.btn-outline-black:hover,
+.btn-outline-black:active,
+.btn-outline-black:focus {
+  background-color: rgba(255, 255, 255, .15);  
+  backdrop-filter: blur(5px);
+  color: white !important;
+}
+
+.shop-now-button:hover,
+.shop-now-button:active,
+.shop-now-button:focus,
+.btn-black:hover,
+.btn-black:active,
+.btn-black:focus {
+  background-color: rgba(94, 94, 94, 0.15);  
+  backdrop-filter: blur(5px);
+  color: white;
+}
+
+.nav-link {
+    display: block;
+    padding: .5rem .5rem;
+}
+
+.small-links {
+    z-index: 2;
+}
 
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
