--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
   {% endblock %}
 
@@ -39,6 +39,7 @@
   {% endblock %}
 
   {% block extra_js %}
+
   {% endblock %}
 
   <title>Wilson's Express Sameday Ltd {% block extra_title %}{% endblock %}</title>
@@ -48,8 +49,15 @@
   <header class="container-fluid fixed-top">
     <div id="topnav" class="row pt-lg-2 d-flex">
       <div class="col-8 col-sm-6 py-1 py-lg-0 d-flex flex-column justify-content-between">
-        <ul class="list-inline list-unstyled text-left my-0">
-          <li class="list-inline-item dropdown">
+        <ul class="list-inline list-unstyled text-left my-0 small-links">
+          <li class="list-inline-item">
+            <a class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Contact Us" href="#">
+              <div class="text-center text-white">
+                <div><i class="fas fa-envelope fa-lg"></i></div>
+              </div>
+            </a>
+          </li>
+          <li class="list-inline-item dropdown" data-toggle="tooltip" data-placement="bottom" title="Accounts">
             <a class="nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
               <div class="text-center text-white">
@@ -66,27 +74,32 @@
               {% else %}
               <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
               <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-              <a href="https://apc.hypaship.com/" target="_blank" rel="noopener" class="dropdown-item">Apc Hypaship Login</a>
+              <a href="https://apc.hypaship.com/" target="_blank" rel="noopener" class="dropdown-item">Apc Hypaship
+                Login</a>
               {% endif %}
             </div>
           </li>
         </ul>
-        <div class="row">
-        <nav class="navbar navbar-dark navbar-expand-lg navbar-light ">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+        <div class="row mx-lg-auto">
+          <nav class="navbar navbar-dark navbar-expand-lg navbar-light ">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+              aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
             {% include 'includes/main-nav.html' %}
-            </nav>
+          </nav>
         </div>
       </div>
       <div class="col-4 col-sm-6 py-1 py-lg-0 d-flex justify-content-end">
         <a href="{% url 'home' %}" class="nav-link main-logo-link">
-          <img width="300" class="logo-font text-dark my-0" src="/media/wilsons-logo-trans.png" alt="Wilson's Express">
+          <img width="300" class="logo-font text-dark my-0 d-none d-sm-block" src="/media/wilsons-logo-trans.png"
+            alt="Wilson's Express">
+          <img width="250" class="logo-font text-dark my-0 d-sm-none" src="/media/wilsons-logo-trans.png"
+            alt="Wilson's Express">
         </a>
       </div>
     </div>
-        
+
   </header>
 
 
@@ -102,7 +115,14 @@
     $(function () {
       $('[data-toggle="tooltip"]').tooltip()
     })
-    </script>
+    $(function () {
+      $(document).on('shown.bs.tooltip', function (e) {
+        setTimeout(function () {
+          $(e.target).tooltip('hide');
+        }, 750);
+      });
+    });
+  </script>
   {% endblock %}
 </body>
 
