small styling changes, header bg changed to white, correct base.html used in allauth templates

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,25 +11,25 @@
 <div class="rgba-black-light">
   <div class="container h-100">
     <div class="row h-100 header-container">
-      <div class="col-12 col-md-8 my-auto text-center text-md-left">
-        <h1 class="text-white">
+      <div class="col-12 col-lg-8 my-auto">
+        <h1 class="text-white text-center text-lg-left">
           Wilson's Express Sameday Ltd
         </h1>
-        <h2 class="text-white display-4 mb-5">Specalists in Sameday, Next Day and International Deliveries!</h2>
+        <h2 class="text-white display-4 mb-5 text-center text-lg-left">Specalists in Sameday, Next Day and International Deliveries!</h2>
         <hr class="separator w-100">
         <div class="my-5">
           <h3 class="text-white">Need to send a parcel? Open a credit account? We can help!</h3>
           <h4>
-            <a href="#" class="shop-now-button btn btn-lg rounder-0 text-uppercase py-3 text-white">Send a
+            <a href="#" class="home-buttons btn btn-md rounder-0 text-uppercase py-3 text-white">Send a
               Parcel</a>
-            <a href="#" class="shop-now-button btn btn-lg rounder-0 text-uppercase py-3 text-white">Open a
+            <a href="#" class="home-buttons btn btn-md rounder-0 text-uppercase py-3 text-white">Open a
               Credit Account</a>
           </h4>
         </div>
         <div class="my-5">
           <h3 class="text-white">Try our new store for all your packaging needs</h3>
           <h4>
-            <a href="#" class="shop-now-button btn btn-lg rounder-0 text-uppercase py-3 text-white">Store</a>
+            <a href="#" class="home-buttons btn btn-md rounder-0 text-uppercase py-3 text-white">Store</a>
           </h4>
         </div>
       </div>
