--- a/static/css/base.css
+++ b/static/css/base.css
@@ -28,84 +28,138 @@ body {
 
 /* from Bulma */
 .icon {
-    align-items: center;
-    display: inline-flex;
-    justify-content: center;
-    height: 1.5rem;
-    width: 1.5rem;
+  align-items: center;
+  display: inline-flex;
+  justify-content: center;
+  height: 1.5rem;
+  width: 1.5rem;
 }
 
 .logo-font {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 .main-logo-link {
-    width: fit-content;
-    top: 0;
+  width: fit-content;
+  top: 0;
 }
 
 button.navbar-toggler {
-    z-index: 1;
-    margin-top: 60px;
+  z-index: 1;
+  margin-top: 60px;
 }
 
 #topnav {
-    backdrop-filter: blur(8px);
+  backdrop-filter: blur(8px);
 }
 
 .separator {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    border: 0;
-    border-top: 2px solid #ffffffd7;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: 0;
+  border-top: 2px solid #ffffffd7;
 }
 
-.shop-now-button {
+.home-buttons {
   color: white;
   background-color: rgba(255, 255, 255, .15);  
   backdrop-filter: blur(5px);
-  min-width: 260px;
+  min-width: 160px;
 }
 
-.btn-black {
+.btn-glass {
   background-color: rgba(255, 255, 255, .15);  
   backdrop-filter: blur(5px);
   color: white;
 }
 
-.btn-outline-black {
+.btn-outline-glass {
   background-color: rgba(255, 255, 255, .15);  
   backdrop-filter: blur(5px);
   color: black !important; /* use important to override link colors for <a> elements */
   border: 1px solid black;
 }
 
-.btn-outline-black:hover,
-.btn-outline-black:active,
+.btn-outline-glass:hover,
+.btn-outline-glass:active,
 .btn-outline-black:focus {
   background-color: rgba(255, 255, 255, .15);  
   backdrop-filter: blur(5px);
   color: white !important;
 }
 
-.shop-now-button:hover,
-.shop-now-button:active,
-.shop-now-button:focus,
-.btn-black:hover,
-.btn-black:active,
-.btn-black:focus {
+.home-buttons:hover,
+.home-buttons:active,
+.home-buttons:focus,
+.btn-glass:hover,
+.btn-glass:active,
+.btn-glass:focus {
   background-color: rgba(94, 94, 94, 0.15);  
   backdrop-filter: blur(5px);
   color: white;
 }
 
 .nav-link {
-    display: block;
-    padding: .5rem .5rem;
+  display: block;
+  padding: .5rem .5rem;
 }
 
 .small-links {
-    z-index: 2;
+  z-index: 2;
+}
+
+/* Allauth form formatting */
+
+.allauth-form-inner-content p {
+    margin-top: 1.5rem; /* mt-4 */
+    color: #6c757d; /* text-secondary */
+}
+
+.allauth-form-inner-content input {
+    border-color: #000;
+    border-radius: 0;
+}
+
+.allauth-form-inner-content label:not([for='id_remember']) {
+    display: none;
+}
+
+.allauth-form-inner-content input::placeholder {
+    color: #aab7c4;
+}
+
+.allauth-form-inner-content button,
+.allauth-form-inner-content input[type='submit'] {
+	/* btn */
+	display: inline-block;
+    font-weight: 400;
+    color: #fff;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: #000;
+    border: 1px solid #000;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0;
+
+    /* standard bootstrap btn transitions */
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.allauth-form-inner-content button:hover,
+.allauth-form-inner-content input[type='submit']:hover {	
+	color: #fff;
+    background-color: #222;
+    border-color: #222;
+}
+
+.allauth-form-inner-content a {
+	color: #17a2b8; /* text-info */
 }
 
 /* Slightly larger container on xl screens */
@@ -117,15 +171,21 @@ button.navbar-toggler {
 
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
-    .fixed-top-desktop-only {
-        position: fixed;
-        top: 0;
-        right: 0;
-        left: 0;
-        z-index: 1030;
-    }
-
-    .header-container {
-        padding-top: 164px;
-    }
+  .fixed-top-desktop-only {
+      position: fixed;
+      top: 0;
+      right: 0;
+      left: 0;
+      z-index: 1030;
+  }
+  .header-container {
+      padding-top: 164px;
+  }
 }
+
+@media (max-width: 991px) {
+  .nav-item {
+    border-bottom: 1px solid #fff;
+  }  
+}
+ 
