--- a/templates/base.html
+++ b/templates/base.html
@@ -47,12 +47,12 @@
 
 <body>
   <header class="container-fluid fixed-top">
-    <div id="topnav" class="row pt-lg-2 d-flex">
+    <div id="topnav" class="row bg-white pt-lg-2 d-flex">
       <div class="col-8 col-sm-6 py-1 py-lg-0 d-flex flex-column justify-content-between">
         <ul class="list-inline list-unstyled text-left my-0 small-links">
           <li class="list-inline-item">
             <a class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Contact Us" href="#">
-              <div class="text-center text-white">
+              <div class="text-center text-dark">
                 <div><i class="fas fa-envelope fa-lg"></i></div>
               </div>
             </a>
@@ -60,7 +60,7 @@
           <li class="list-inline-item dropdown" data-toggle="tooltip" data-placement="bottom" title="Accounts">
             <a class="nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
-              <div class="text-center text-white">
+              <div class="text-center text-dark">
                 <div><i class="fas fa-user fa-lg"></i></div>
               </div>
             </a>
