--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,13 +1,13 @@
 <div class="collapse navbar-collapse" id="main-nav">
   <ul class="navbar-nav w-auto mx-auto ">
     <li class="nav-item text-white">
-            <a class="logo-font font-weight-bold nav-link mr-5 text-white" href="{% url 'home' %}" id="home-link">
+            <a class="logo-font font-weight-bold nav-link mr-5 text-dark" href="{% url 'home' %}" id="home-link">
                 Home
             </a>
     </li>
     <li class="nav-item dropdown">
       <a
-        class="logo-font font-weight-bold nav-link mr-5 text-white text-nowrap"
+        class="logo-font font-weight-bold nav-link mr-5 text-dark text-nowrap"
         href="#"
         id="recieving-link"
         data-toggle="dropdown"
@@ -24,7 +24,7 @@
 
     <li class="nav-item dropdown">
       <a
-        class="logo-font font-weight-bold nav-link mr-5 text-white text-nowrap"
+        class="logo-font font-weight-bold nav-link mr-5 text-dark text-nowrap"
         href="#"
         id="sending-link"
         data-toggle="dropdown"
@@ -40,7 +40,7 @@
     </li>
     <li class="nav-item dropdown">
       <a
-        class="logo-font font-weight-bold nav-link text-white text-nowrap"
+        class="logo-font font-weight-bold nav-link text-dark text-nowrap"
         href="#"
         id="store-link"
       >
