added products app, models and fixtures

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,6 +1,6 @@
 <div class="collapse navbar-collapse" id="main-nav">
   <ul class="navbar-nav w-auto mx-auto ">
-    <li class="nav-item text-white">
+    <li class="nav-item">
             <a class="logo-font font-weight-bold nav-link mr-5 text-dark" href="{% url 'home' %}" id="home-link">
                 Home
             </a>
