--- a/static/css/base.css
+++ b/static/css/base.css
@@ -185,7 +185,34 @@ button.navbar-toggler {
 
 @media (max-width: 991px) {
   .nav-item {
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid;
   }  
+  .btn.btn-outline-glass.rounded-0,
+  .btn.btn-glass.rounded-0 {
+        padding: .375rem .375rem;
+    }
+
+    .btn.btn-outline-glass.rounded-0.btn-md,
+    .btn.btn-glass.rounded-0.btn-md {
+        padding: .375rem .375rem;
+        font-size: .75rem;
+    }
 }
  
+@media (max-width: 600px) {
+  h1 {
+    font-size: 2rem;
+    font-weight: 300;
+    line-height: 1.2;
+  }
+  h3 {
+    font-size: 1.5rem;
+    font-weight: 300;
+    line-height: 1.2;
+  }
+  .display-4 {
+    font-size: 3rem;
+    font-weight: 300;
+    line-height: 1.2;
+  }
+}
