--- a/templates/base.html
+++ b/templates/base.html
@@ -81,7 +81,7 @@
           </li>
         </ul>
         <div class="row mx-lg-auto">
-          <nav class="navbar navbar-dark navbar-expand-lg navbar-light ">
+          <nav class="navbar navbar-light navbar-expand-lg navbar-light ">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
               aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
