--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,7 +8,8 @@
         <h1 class="text-white text-center text-lg-left">
           Wilson's Express Sameday Ltd
         </h1>
-        <h2 class="text-white display-4 mb-5 text-center text-lg-left">Specalists in Sameday, Next Day and International Deliveries!</h2>
+        <h2 class="text-white display-4 mb-5 text-center text-lg-left">Specalists in Sameday, Next Day and International
+          Deliveries!</h2>
         <hr class="separator w-100">
         <div class="my-5">
           <h3 class="text-white">Need to send a parcel? Open a credit account? We can help!</h3>
@@ -22,12 +23,13 @@
         <div class="my-5">
           <h3 class="text-white">Try our new store for all your packaging needs</h3>
           <h4>
-            <a href="#" class="home-buttons btn btn-md rounder-0 text-uppercase py-2 text-white">Store</a>
+            <a href="{% url 'categories' %}"
+              class="home-buttons btn btn-md rounder-0 text-uppercase py-2 text-white">Store</a>
           </h4>
         </div>
       </div>
     </div>
   </div>
 </div>
-</div>
+
 {% endblock %}
