--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
 <body>
   <header class="container-fluid fixed-top">
     <div id="topnav" class="row bg-white pt-lg-2 d-flex">
-      <div class="col-8 col-sm-6 py-1 py-lg-0 d-flex flex-column justify-content-between">
+      <div class="col-sm-8 col-6 py-1 py-lg-0 d-flex flex-column justify-content-between">
         <ul class="list-inline list-unstyled text-left my-0 small-links">
           <li class="list-inline-item">
             <a class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Contact Us" href="#">
@@ -57,7 +57,14 @@
               </div>
             </a>
           </li>
-          <li class="list-inline-item dropdown" data-toggle="tooltip" data-placement="bottom" title="Accounts">
+          <li class="list-inline-item">
+            <a class="nav-link" data-toggle="tooltip" data-placement="bottom" title="FAQ" href="#">
+              <div class="text-center text-dark">
+                <div><i class="fas fa-question-circle fa-lg"></i></div>
+              </div>
+            </a>
+          </li>
+           <li class="list-inline-item dropdown" data-toggle="tooltip" data-placement="bottom" title="Accounts">
             <a class="nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
               <div class="text-center text-dark">
@@ -68,6 +75,7 @@
               {% if request.user.is_authenticated %}
               {% if request.user.is_superuser %}
               <a href="" class="dropdown-item">Product Management</a>
+              <a href="/admin/" class="dropdown-item">Admin</a>
               {% endif %}
               <a href="" class="dropdown-item">My Profile</a>
               <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
@@ -79,10 +87,12 @@
               {% endif %}
             </div>
           </li>
+
+          
         </ul>
         <div class="row mx-lg-auto">
           <nav class="navbar navbar-light navbar-expand-lg navbar-light ">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+            <button id="main-nav-btn" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav,#store-nav"
               aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -90,7 +100,7 @@
           </nav>
         </div>
       </div>
-      <div class="col-4 col-sm-6 py-1 py-lg-0 d-flex justify-content-end">
+      <div class="col-sm-4 col-6 py-1 py-lg-0 d-flex justify-content-end">
         <a href="{% url 'home' %}" class="nav-link main-logo-link">
           <img width="300" class="logo-font text-dark my-0 d-none d-sm-block" src="/media/wilsons-logo-trans.png"
             alt="Wilson's Express">
@@ -99,13 +109,9 @@
         </a>
       </div>
     </div>
-
-  </header>
-
-
-
   {% block page_header %}
   {% endblock %}
+  </header>
 
   {% block content %}
   {% endblock %}
