started product and category templates, main header styling, size and padding

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,7 +4,7 @@
 <div class="rgba-black-light">
   <div class="container h-100">
     <div class="row h-100 header-container">
-      <div class="col-12 col-lg-8 my-auto">
+      <div class="col-12 col-lg-8">
         <h1 class="text-white text-center text-lg-left">
           Wilson's Express Sameday Ltd
         </h1>
