--- a/templates/base.html
+++ b/templates/base.html
@@ -102,9 +102,9 @@
       </div>
       <div class="col-sm-4 col-6 py-1 py-lg-0 d-flex justify-content-end">
         <a href="{% url 'home' %}" class="nav-link main-logo-link">
-          <img width="300" class="logo-font text-dark my-0 d-none d-sm-block" src="/media/wilsons-logo-trans.png"
+          <img width="300" class="logo-font text-dark my-0 d-none d-lg-block" src="/media/wilsons-logo-trans.png"
             alt="Wilson's Express">
-          <img width="250" class="logo-font text-dark my-0 d-sm-none" src="/media/wilsons-logo-trans.png"
+          <img width="200" class="logo-font text-dark my-0 d-lg-none" src="/media/wilsons-logo-trans.png"
             alt="Wilson's Express">
         </a>
       </div>
