--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -5,13 +5,69 @@
 {% include 'includes/store-nav.html' %}
 {% endblock %}
 
+
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                {{ categories }}
-                {{ products }}
+<div class="overlay container"></div>
+<div class="container store-header-margin">
+  <div class="row">
+    <div class="product-container col-10 offset-1">
+      <div class="row mt-1 mb-2"></div>
+      <div class="row">
+        {% for product in products %}
+        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="card h-100 border-0">
+            {% if product.image1 %}
+            <a href="">
+              <img class="card-img-top img-fluid" src="{{ product.image1_url }}" alt="{{ product.name }}">
+            </a>
+            {% else %}
+            <a href="">
+              <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+            </a>
+            {% endif %}
+            {% if 'boxes' in product.category|stringformat:"s"  %}
+            <div class="card-body pb-0">
+              <p class="mb-0">{{ product.size }}</p>
             </div>
+            {% else %}
+        
+            
+            {% endif %}
+            <div class="card-body pb-0">
+              <p class="mb-0">{{ product.name }}</p>
+            </div>
+            <div class="card-footer bg-white pt-0 border-0 text-left">
+              <div class="row">
+                <div class="col">
+                  <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+        {% if forloop.counter|divisibleby:1 %}
+        <div class="col-12 d-sm-none mb-5">
+          <hr>
+        </div>
+        {% endif %}
+        {% if forloop.counter|divisibleby:2 %}
+        <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
+          <hr>
+        </div>
+        {% endif %}
+        {% if forloop.counter|divisibleby:3 %}
+        <div class="col-12 d-none d-lg-block d-xl-none mb-5">
+          <hr>
+        </div>
+        {% endif %}
+        {% if forloop.counter|divisibleby:4 %}
+        <div class="col-12 d-none d-xl-block mb-5">
+          <hr>
+        </div>
+        {% endif %}
+        {% endfor %}
+      </div>
     </div>
+  </div>
+</div>
 {% endblock %}
