--- a/static/css/base.css
+++ b/static/css/base.css
@@ -45,7 +45,7 @@ body {
 
 button#main-nav-btn.navbar-toggler {
   z-index: 1;
-  margin-top: 60px;
+  margin-top: 13px;
 }
 
 .navbar.navbar-expand-lg.navbar-dark {
@@ -53,9 +53,37 @@ button#main-nav-btn.navbar-toggler {
 }
 
 #topnav {
-  backdrop-filter: blur(8px);
+  box-shadow: -1px 4px 10px -1px rgba(0,0,0,0.7);
+  position:relative;
+  z-index:999;
 }
 
+.header-container {
+    margin-top: 200px;
+  }
+
+#store {
+  box-shadow: -1px 4px 10px -1px rgba(0,0,0,0.7);
+  position:relative;
+  z-index:998;
+}
+
+.overlay {
+  height: 100%;
+  width: 100%;
+  margin: auto;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  background: white;
+  z-index: -1;
+}
+
+.store-header-margin {
+    margin-top: 240px;
+}
 .separator {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -173,11 +201,28 @@ button#main-nav-btn.navbar-toggler {
       right: 0;
       left: 0;
       z-index: 1030;
-  }
-  .header-container {
-      padding-top: 164px;
+
   }
 }
+
+@media (max-width: 992px) {
+  .header-container {
+    margin-top: 130px;
+}
+}
+
+@media (max-width: 999px) {
+  .store-header-margin {
+    margin-top: 180px;
+}
+}
+
+@media (max-width: 575px) {
+  .store-header-margin {
+    margin-top: 130px;
+}
+}
+
 
 @media (max-width: 991px) {
   .nav-item {
