--- a/templates/includes/store-nav.html
+++ b/templates/includes/store-nav.html
@@ -1,4 +1,4 @@
-<div class="row bg-dark nav justify-content-lg-center justify-content-start">
+<div id="store" class="row bg-dark nav justify-content-lg-center justify-content-start">
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="collapse navbar-collapse" id="store-nav">
       <ul class="navbar-nav w-auto mx-auto">
