removed categories template and moved into products template

--- a/templates/includes/store-nav.html
+++ b/templates/includes/store-nav.html
@@ -34,7 +34,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="logo-font nav-link mr-5 text-light text-nowrap" id="tape-link" href="#">
+          <a class="logo-font nav-link mr-5 text-light text-nowrap" id="tape-link" href="{% url 'categories' %}?category=tape">
             Tape
           </a>
         </li>
