--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -14,7 +14,7 @@
       <div class="row mt-1 mb-2"></div>
       <div class="row">
 
-        
+
         {% for category in categories %}
         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="card h-100 border-0">
@@ -59,11 +59,11 @@
         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="card h-100 border-0">
             {% if product.image1 %}
-            <a href="">
+            <a href="{% url 'product_detail' product.id %}">
               <img class="card-img-top img-fluid" src="{{ product.image1_url }}" alt="{{ product.name }}">
             </a>
             {% else %}
-            <a href="">
+            <a href="{% url 'product_detail' product.id %}">
               <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
             </a>
             {% endif %}
