added search bar to store and completed functionality

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -10,6 +10,16 @@
 <div class="overlay container"></div>
 <div class="container store-header-margin">
   <div class="row">
+    <div class="col text-center mt-3">
+      <h2 class="logo=font">Products</h2>
+      {% for c in current_categories %}
+      <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
+        <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
+      </a>
+      {% endfor %}
+      <hr class="w-50 mb-1">
+    </div>
+
     <div class="product-container col-10 offset-1">
       <div class="row mt-1 mb-2"></div>
       <div class="row">
@@ -72,8 +82,8 @@
               <p class="mb-0">{{ product.size }}</p>
             </div>
             {% else %}
-        
-            
+
+
             {% endif %}
             <div class="card-body pb-0">
               <p class="mb-0">{{ product.name }}</p>
