--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
               </div>
             </a>
           </li>
-           <li class="list-inline-item dropdown" data-toggle="tooltip" data-placement="bottom" title="Accounts">
+          <li class="list-inline-item dropdown" data-toggle="tooltip" data-placement="bottom" title="Accounts">
             <a class="nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
               <div class="text-center text-dark">
@@ -88,12 +88,14 @@
             </div>
           </li>
 
-          
+
+
         </ul>
         <div class="row mx-lg-auto">
           <nav class="navbar navbar-light navbar-expand-lg navbar-light ">
-            <button id="main-nav-btn" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav,#store-nav"
-              aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <button id="main-nav-btn" class="navbar-toggler" type="button" data-toggle="collapse"
+              data-target="#main-nav,#store-nav" aria-controls="main-nav" aria-expanded="false"
+              aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             {% include 'includes/main-nav.html' %}
@@ -109,9 +111,13 @@
         </a>
       </div>
     </div>
-  {% block page_header %}
-  {% endblock %}
+    {% block page_header %}
+    {% endblock %}
   </header>
+
+  {% if messages %}
+    <div class="message-container"></div>
+  {% endif %}
 
   {% block content %}
   {% endblock %}
