--- a/templates/includes/store-nav.html
+++ b/templates/includes/store-nav.html
@@ -1,10 +1,34 @@
 <div id="store" class="row bg-dark nav justify-content-lg-center justify-content-start">
-  <nav class="navbar navbar-expand-lg navbar-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark w-100">
     <div class="collapse navbar-collapse" id="store-nav">
+      <ul class="navbar-nav">
+        <li class="nav-item search-bar">
+          <a class="text-light nav-link" href="#" id="drop-search" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">
+            <div><i class="fas fa-search fa-lg"></i></div>
+
+          </a>
+          <div class="dropdown-menu bg-dark border-0 rounded-0 search-bar" aria-labelledby="drop-search">
+            <form class="form" method="GET" action="{% url 'products' %}">
+              <div class="input-group">
+                <input class="form-control border border-black rounded-0" type="text" name="q"
+                  placeholder="Search our site" />
+                <div class="input-group-append">
+                  <button class="form-control form-control btn btn-glass border border-black rounded-0" type="submit">
+                    <span class="icon">
+                      <i class="fas fa-search"></i>
+                    </span>
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </li>
+      </ul>
       <ul class="navbar-nav w-auto mx-auto">
+
         <li class="nav-item">
-          <a class="logo-font nav-link mr-5 text-light text-nowrap" id="all-products-link"
-            href="{% url 'products' %}">
+          <a class="logo-font nav-link mr-5 text-light text-nowrap" id="all-products-link" href="{% url 'products' %}">
             All Products
           </a>
         </li>
@@ -34,7 +58,8 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="logo-font nav-link mr-5 text-light text-nowrap" id="tape-link" href="{% url 'categories' %}?category=tape">
+          <a class="logo-font nav-link mr-5 text-light text-nowrap" id="tape-link"
+            href="{% url 'categories' %}?category=tape">
             Tape
           </a>
         </li>
