implimented category filtering and added to store page links

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -23,7 +23,7 @@
         <div class="my-5">
           <h3 class="text-white">Try our new store for all your packaging needs</h3>
           <h4>
-            <a href="{% url 'categories' %}"
+            <a href="{% url 'store_home' %}"
               class="home-buttons btn btn-md rounder-0 text-uppercase py-2 text-white">Store</a>
           </h4>
         </div>
