--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -43,7 +43,7 @@
     <li class="nav-item dropdown">
       <a
         class="logo-font font-weight-bold nav-link text-dark text-nowrap"
-        href="{% url 'categories' %}"
+        href="{% url 'store_home' %}"
         id="store-link"
       >
         Store
