--- a/templates/includes/store-nav.html
+++ b/templates/includes/store-nav.html
@@ -27,10 +27,18 @@
       </ul>
       <ul class="navbar-nav w-auto mx-auto">
 
-        <li class="nav-item">
-          <a class="logo-font nav-link mr-5 text-light text-nowrap" id="all-products-link" href="{% url 'products' %}">
+        <li class="nav-item dropdown">
+          <a class="logo-font nav-link mr-5 text-light text-nowrap" href="#" id="all-products-link"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             All Products
           </a>
+          <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
+            <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item inline-list">By
+              Price</a>
+            <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item inline-list">By
+              Category</a>
+            <a href="{% url 'products' %}" class="dropdown-item inline-list">All Products</a>
+          </div>
         </li>
         <li class="nav-item dropdown">
           <a class="logo-font nav-link mr-5 text-light text-nowrap" href="#" id="boxes-link" data-toggle="dropdown"
@@ -38,10 +46,14 @@
             Boxes
           </a>
           <div class="dropdown-menu border-0" aria-labelledby="boxes-link">
-            <a href="{% url 'categories' %}?category=single_wall_boxes" class="dropdown-item inline-list">Single Wall Boxes</a>
-            <a href="{% url 'categories' %}?category=double_wall_boxes" class="dropdown-item inline-list">Double Wall Boxes</a>
-            <a href="{% url 'categories' %}?category=double_wall_long_boxes" class="dropdown-item inline-list">Double Wall Long Boxes</a>
-            <a href="{% url 'categories' %}?category=bottle_boxes" class="dropdown-item inline-list">Bottle Boxes</a>
+            <a href="{% url 'categories' %}?category=single_wall_boxes" class="dropdown-item inline-list">Single Wall
+              Boxes</a>
+            <a href="{% url 'categories' %}?category=double_wall_boxes" class="dropdown-item inline-list">Double Wall
+              Boxes</a>
+            <a href="{% url 'categories' %}?category=double_wall_long_boxes" class="dropdown-item inline-list">Double
+              Wall Long Boxes</a>
+            <a href="{% url 'categories' %}?category=bottle_boxes" class="dropdown-item inline-list">Bottle
+              Boxes</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -50,11 +62,16 @@
             General Packing
           </a>
           <div class="dropdown-menu border-0" aria-labelledby="general-packing-link">
-            <a href="{% url 'categories' %}?category=bubble_bags" class="dropdown-item inline-list">Bubble Bags</a>
-            <a href="{% url 'categories' %}?category=bubble_wrap" class="dropdown-item inline-list">Bubble Wrap</a>
-            <a href="{% url 'categories' %}?category=document_wallets" class="dropdown-item inline-list">Document Wallets</a>
-            <a href="{% url 'categories' %}?category=shrink_wrap" class="dropdown-item inline-list">Shrink Wrap</a>
-            <a href="{% url 'categories' %}?category=void_fill" class="dropdown-item inline-list">Void Fill</a>
+            <a href="{% url 'categories' %}?category=bubble_bags" class="dropdown-item inline-list">Bubble
+              Bags</a>
+            <a href="{% url 'categories' %}?category=bubble_wrap" class="dropdown-item inline-list">Bubble
+              Wrap</a>
+            <a href="{% url 'categories' %}?category=document_wallets" class="dropdown-item inline-list">Document
+              Wallets</a>
+            <a href="{% url 'categories' %}?category=pallet_wrap" class="dropdown-item inline-list">Pallet
+              Wrap</a>
+            <a href="{% url 'categories' %}?category=void_fill" class="dropdown-item inline-list">Void
+              Fill</a>
           </div>
         </li>
         <li class="nav-item">
