added p roduct count and sorting to product pages

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -9,42 +9,80 @@
 {% block content %}
 <div class="overlay container"></div>
 <div class="container store-header-margin">
+  <div class="row mt-1 mb-2">
+    <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
+      <div class="sort-select-wrapper w-50">
+        <select id="sort-selector"
+          class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+          <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
+          <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)
+          </option>
+          <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)
+          </option>
+          <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
+          <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
+          <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A-Z)
+          </option>
+          <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)
+          </option>
+        </select>
+      </div>
+    </div>
+    <div class="col-12 col-md-6 order-md-first">
+      <p class="text-muted mt-3 text-center text-md-left">
+        <span class="small">
+        {% if search_term or current_categories or current_sorting != 'None_None' %}
+        <a href="{% url 'store_home' %}">Categories</a> | 
+        {% endif %}
+        {{ products|length }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
+        </span>
+
+      </p>
+    </div>
+  </div>
   <div class="row">
     <div class="col text-center mt-3">
 
       {% url 'store_home' as the_url %}
       {% if request.get_full_path == the_url %}
 
-        <h2 class="logo-font">Categories</h2>
+      <h2 class="logo-font">Categories</h2>
 
       {% endif %}
 
-      {% if request.get_full_path == '/products/all_products/?sort=price&direction=asc' %}
-      
-        <h2 class="logo-font">Products</h2>
-        <h5 class="logo-font">Sorted By Price</h5>
+      {% if request.get_full_path == '/products/all_products/?sort=price&direction=asc' or request.get_full_path == '/products/all_products/?sort=price&direction=desc' %}
+
+      <h2 class="logo-font">Products</h2>
+      <h5 class="logo-font">Sorted By Price</h5>
 
       {% endif %}
 
-      {% if request.get_full_path == '/products/all_products/?sort=category&direction=asc' %}
-      
-        <h2 class="logo-font">Products</h2>
-        <h5 class="logo-font">Sorted By Category</h5>
+      {% if request.get_full_path == '/products/all_products/?sort=category&direction=asc' or request.get_full_path == '/products/all_products/?sort=category&direction=desc' %}
+
+      <h2 class="logo-font">Products</h2>
+      <h5 class="logo-font">Sorted By Category</h5>
 
       {% endif %}
-      
+
+      {% if request.get_full_path == '/products/all_products/?sort=name&direction=asc' or request.get_full_path == '/products/all_products/?sort=name&direction=desc' %}
+
+      <h2 class="logo-font">Products</h2>
+      <h5 class="logo-font">Sorted By Name</h5>
+
+      {% endif %}
+
 
       {% url 'products' as the_url %}
       {% if request.get_full_path == the_url %}
-      
-        <h2 class="logo-font">Products</h2>
+
+      <h2 class="logo-font">Products</h2>
 
       {% endif %}
-      
+
       {% for c in current_categories %}
-        <h2 class="logo-font">{{ c.friendly_name }}</h2>
+      <h2 class="logo-font">{{ c.friendly_name }}</h2>
       {% endfor %}
-       
+
       <hr class="w-50 mb-1">
     </div>
 
@@ -150,4 +188,33 @@
     </div>
   </div>
 </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+<script type="text/javascript">
+	$('.btt-link').click(function(e) {
+		window.scrollTo(0,0)
+	})
+    $('#sort-selector'). change(function() {
+        let selector = $(this);
+        let currentUrl = new URL(window.location);
+
+        let selectedVal = selector.val();
+        if(selectedVal != "reset"){
+            let sort = selectedVal.split("_")[0];
+            let direction = selectedVal.split("_")[1];
+
+            currentUrl.searchParams.set("sort", sort);
+            currentUrl.searchParams.set("direction", direction);
+
+            window.location.replace(currentUrl);
+        } else {
+            currentUrl.searchParams.delete("sort");
+            currentUrl.searchParams.delete("direction");
+
+            window.location.replace(currentUrl);
+        }
+    })
+</script>
 {% endblock %}
