added back to top button

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,7 +8,7 @@
         <h1 class="text-white text-center text-lg-left">
           Wilson's Express Sameday Ltd
         </h1>
-        <h2 class="text-white display-4 mb-5 text-center text-lg-left">Specalists in Sameday, Next Day and International
+        <h2 class="text-white display-4 mb-5 text-center text-lg-left">Specialists in Sameday, Next Day and International
           Deliveries!</h2>
         <hr class="separator w-100">
         <div class="my-5">
