--- a/templates/base.html
+++ b/templates/base.html
@@ -48,49 +48,48 @@
 <body>
   <header class="container-fluid fixed-top">
     <div id="topnav" class="row bg-white pt-lg-2 d-flex">
-      <div class="col-sm-8 col-6 py-1 py-lg-0 d-flex flex-column justify-content-between">
-        <ul class="list-inline list-unstyled text-left my-0 small-links">
-          <li class="list-inline-item">
-            <a class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Contact Us" href="#">
-              <div class="text-center text-dark">
-                <div><i class="fas fa-envelope fa-lg"></i></div>
+      <div class="col-sm-8 col-6 pt-1 pt-lg-0 d-flex flex-column justify-content-between">
+        <div class="px-1 row">
+          <ul class="list-inline list-unstyled text-left my-0 small-links">
+            <li class="list-inline-item">
+              <a class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Contact Us" href="#">
+                <div class="text-center text-dark">
+                  <div><i class="fas fa-envelope fa-lg"></i></div>
+                </div>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="nav-link" data-toggle="tooltip" data-placement="bottom" title="FAQ" href="#">
+                <div class="text-center text-dark">
+                  <div><i class="fas fa-question-circle fa-lg"></i></div>
+                </div>
+              </a>
+            </li>
+            <li class="list-inline-item dropdown" data-toggle="tooltip" data-placement="bottom" title="Accounts">
+              <a class="nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">
+                <div class="text-center text-dark">
+                  <div><i class="fas fa-user fa-lg"></i></div>
+                </div>
+              </a>
+              <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                {% if request.user.is_authenticated %}
+                {% if request.user.is_superuser %}
+                <a href="" class="dropdown-item">Product Management</a>
+                <a href="/admin/" class="dropdown-item">Admin</a>
+                {% endif %}
+                <a href="" class="dropdown-item">My Profile</a>
+                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                {% else %}
+                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                <a href="https://apc.hypaship.com/" target="_blank" rel="noopener" class="dropdown-item">Apc Hypaship
+                  Login</a>
+                {% endif %}
               </div>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="nav-link" data-toggle="tooltip" data-placement="bottom" title="FAQ" href="#">
-              <div class="text-center text-dark">
-                <div><i class="fas fa-question-circle fa-lg"></i></div>
-              </div>
-            </a>
-          </li>
-          <li class="list-inline-item dropdown" data-toggle="tooltip" data-placement="bottom" title="Accounts">
-            <a class="nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false">
-              <div class="text-center text-dark">
-                <div><i class="fas fa-user fa-lg"></i></div>
-              </div>
-            </a>
-            <div class="dropdown-menu border-0" aria-labelledby="user-options">
-              {% if request.user.is_authenticated %}
-              {% if request.user.is_superuser %}
-              <a href="" class="dropdown-item">Product Management</a>
-              <a href="/admin/" class="dropdown-item">Admin</a>
-              {% endif %}
-              <a href="" class="dropdown-item">My Profile</a>
-              <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-              {% else %}
-              <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-              <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-              <a href="https://apc.hypaship.com/" target="_blank" rel="noopener" class="dropdown-item">Apc Hypaship
-                Login</a>
-              {% endif %}
-            </div>
-          </li>
-
-
-
-        </ul>
+            </li>
+          </ul>
+        </div>
         <div class="row mx-lg-auto">
           <nav class="navbar navbar-light navbar-expand-lg navbar-light ">
             <button id="main-nav-btn" class="navbar-toggler" type="button" data-toggle="collapse"
@@ -116,7 +115,7 @@
   </header>
 
   {% if messages %}
-    <div class="message-container"></div>
+  <div class="message-container"></div>
   {% endif %}
 
   {% block content %}
