--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -9,192 +9,207 @@
 {% block content %}
 <div class="overlay container"></div>
 <div class="container store-header-margin">
-  <div class="row mt-1 mb-2">
-    <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
-      <div class="sort-select-wrapper w-50">
-        <select id="sort-selector"
-          class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
-          <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
-          <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)
-          </option>
-          <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)
-          </option>
-          <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
-          <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
-          <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A-Z)
-          </option>
-          <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)
-          </option>
-        </select>
-      </div>
-    </div>
-    <div class="col-12 col-md-6 order-md-first">
-      <p class="text-muted mt-3 text-center text-md-left">
-        <span class="small">
-          {% if search_term or current_categories or current_sorting != 'None_None' %}
-          <a href="{% url 'store_home' %}">Categories</a> |
-          {% endif %}
-          {{ products|length }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
-        </span>
-
-      </p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col text-center mt-3">
-
-      {% url 'store_home' as the_url %}
-      {% if request.get_full_path == the_url %}
-
-      <h2 class="logo-font">Categories</h2>
-
-      {% endif %}
-
-      {% if request.get_full_path == '/products/all_products/?sort=price&direction=asc' or request.get_full_path == '/products/all_products/?sort=price&direction=desc' %}
-
-      <h2 class="logo-font">Products</h2>
-      <h5 class="logo-font">Sorted By Price</h5>
-
-      {% endif %}
-
-      {% if request.get_full_path == '/products/all_products/?sort=category&direction=asc' or request.get_full_path == '/products/all_products/?sort=category&direction=desc' %}
-
-      <h2 class="logo-font">Products</h2>
-      <h5 class="logo-font">Sorted By Category</h5>
-
-      {% endif %}
-
-      {% if request.get_full_path == '/products/all_products/?sort=name&direction=asc' or request.get_full_path == '/products/all_products/?sort=name&direction=desc' %}
-
-      <h2 class="logo-font">Products</h2>
-      <h5 class="logo-font">Sorted By Name</h5>
-
-      {% endif %}
-
-
-      {% url 'products' as the_url %}
-      {% if request.get_full_path == the_url %}
-
-      <h2 class="logo-font">Products</h2>
-
-      {% endif %}
-
-      {% for c in current_categories %}
-      <h2 class="logo-font">{{ c.friendly_name }}</h2>
-      {% endfor %}
-
-      <hr class="w-50 mb-1">
-    </div>
-
-    <div class="product-container col-10 offset-1">
-      <div class="row mt-1 mb-2"></div>
-      <div class="row">
-
-
-        {% for category in categories %}
-        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-          <div class="card h-100 border-0">
-            {% if category.image1 %}
-            <a href="">
-              <img class="card-img-top img-fluid" src="{{ category.image1_url }}" alt="{{ category.name }}">
-            </a>
-            {% else %}
-            <a href="">
-              <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ category.name }}">
-            </a>
-            {% endif %}
-            <div class="card-body pb-0">
-              <p class="mb-0">{{ category.friendly_name }}</p>
+    <div class="row mt-1 mb-2">
+        <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
+            <div class="sort-select-wrapper w-50">
+                <select id="sort-selector"
+                    class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                    <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
+                    <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to
+                        high)
+                    </option>
+                    <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high
+                        to low)
+                    </option>
+                    <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)
+                    </option>
+                    <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)
+                    </option>
+                    <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category
+                        (A-Z)
+                    </option>
+                    <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>
+                        Category (Z-A)
+                    </option>
+                </select>
             </div>
-          </div>
         </div>
-        {% if forloop.counter|divisibleby:1 %}
-        <div class="col-12 d-sm-none mb-5">
-          <hr>
-        </div>
-        {% endif %}
-        {% if forloop.counter|divisibleby:2 %}
-        <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
-          <hr>
-        </div>
-        {% endif %}
-        {% if forloop.counter|divisibleby:3 %}
-        <div class="col-12 d-none d-lg-block d-xl-none mb-5">
-          <hr>
-        </div>
-        {% endif %}
-        {% if forloop.counter|divisibleby:4 %}
-        <div class="col-12 d-none d-xl-block mb-5">
-          <hr>
-        </div>
-        {% endif %}
-        {% endfor %}
+        <div class="col-12 col-md-6 order-md-first">
+            <p class="text-muted mt-3 text-center text-md-left">
+                <span class="small">
+                    {% if search_term or current_categories or current_sorting != 'None_None' %}
+                    <a href="{% url 'store_home' %}">Categories</a> |
+                    {% endif %}
+                    {{ products|length }} Products{% if search_term %} found for
+                    <strong>"{{ search_term }}"</strong>{% endif %}
+                </span>
 
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col text-center mt-3">
 
-        {% for product in products %}
-        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-          <div class="card h-100 border-0">
-            {% if product.image1 %}
-            <a href="{% url 'product_detail' product.id %}">
-              <img class="card-img-top img-fluid" src="{{ product.image1_url }}" alt="{{ product.name }}">
-            </a>
-            {% else %}
-            <a href="{% url 'product_detail' product.id %}">
-              <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-            </a>
-            {% endif %}
-            {% if 'boxes' in product.category|stringformat:"s"  %}
-            <div class="card-body pb-0">
-              <p class="mb-0">{{ product.size }}</p>
-            </div>
-            {% else %}
+            {% url 'store_home' as the_url %}
+            {% if request.get_full_path == the_url %}
 
+            <h2 class="logo-font">Categories</h2>
 
             {% endif %}
-            <div class="card-body pb-0">
-              <p class="mb-0">{{ product.name }}</p>
-            </div>
-            <div class="card-footer bg-white pt-0 border-0 text-left">
-              <div class="row">
-                <div class="col">
-                  <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
+
+            {% if request.get_full_path == '/products/all_products/?sort=price&direction=asc' or request.get_full_path == '/products/all_products/?sort=price&direction=desc' %}
+
+            <h2 class="logo-font">Products</h2>
+            <h5 class="logo-font">Sorted By Price</h5>
+
+            {% endif %}
+
+            {% if request.get_full_path == '/products/all_products/?sort=category&direction=asc' or request.get_full_path == '/products/all_products/?sort=category&direction=desc' %}
+
+            <h2 class="logo-font">Products</h2>
+            <h5 class="logo-font">Sorted By Category</h5>
+
+            {% endif %}
+
+            {% if request.get_full_path == '/products/all_products/?sort=name&direction=asc' or request.get_full_path == '/products/all_products/?sort=name&direction=desc' %}
+
+            <h2 class="logo-font">Products</h2>
+            <h5 class="logo-font">Sorted By Name</h5>
+
+            {% endif %}
+
+
+            {% url 'products' as the_url %}
+            {% if request.get_full_path == the_url %}
+
+            <h2 class="logo-font">Products</h2>
+
+            {% endif %}
+
+            {% for c in current_categories %}
+            <h2 class="logo-font">{{ c.friendly_name }}</h2>
+            {% endfor %}
+
+            <hr class="w-50 mb-1">
+        </div>
+
+        <div class="product-container container">
+            <div class="row">
+            <div class="col-10 offset-1">
+                <div class="row mt-1 mb-2"></div>
+                <div class="row">
+
+
+                    {% for category in categories %}
+                    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                        <div class="card h-100 border-0">
+                            {% if category.image1 %}
+                            <a href="">
+                                <img class="card-img-top img-fluid" src="{{ category.image1_url }}"
+                                    alt="{{ category.name }}">
+                            </a>
+                            {% else %}
+                            <a href="">
+                                <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png"
+                                    alt="{{ category.name }}">
+                            </a>
+                            {% endif %}
+                            <div class="card-body pb-0">
+                                <p class="mb-0">{{ category.friendly_name }}</p>
+                            </div>
+                        </div>
+                    </div>
+                    {% if forloop.counter|divisibleby:1 %}
+                    <div class="col-12 d-sm-none mb-5">
+                        <hr>
+                    </div>
+                    {% endif %}
+                    {% if forloop.counter|divisibleby:2 %}
+                    <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
+                        <hr>
+                    </div>
+                    {% endif %}
+                    {% if forloop.counter|divisibleby:3 %}
+                    <div class="col-12 d-none d-lg-block d-xl-none mb-5">
+                        <hr>
+                    </div>
+                    {% endif %}
+                    {% if forloop.counter|divisibleby:4 %}
+                    <div class="col-12 d-none d-xl-block mb-5">
+                        <hr>
+                    </div>
+                    {% endif %}
+                    {% endfor %}
+
+
+                    {% for product in products %}
+                    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                        <div class="card h-100 border-0">
+                            {% if product.image1 %}
+                            <a href="{% url 'product_detail' product.id %}">
+                                <img class="card-img-top img-fluid" src="{{ product.image1_url }}"
+                                    alt="{{ product.name }}">
+                            </a>
+                            {% else %}
+                            <a href="{% url 'product_detail' product.id %}">
+                                <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png"
+                                    alt="{{ product.name }}">
+                            </a>
+                            {% endif %}
+                            {% if 'boxes' in product.category|stringformat:"s"  %}
+                            <div class="card-body pb-0">
+                                <p class="mb-0">{{ product.size }}</p>
+                            </div>
+                            {% else %}
+
+
+                            {% endif %}
+                            <div class="card-body pb-0">
+                                <p class="mb-0">{{ product.name }}</p>
+                            </div>
+                            <div class="card-footer bg-white pt-0 border-0 text-left">
+                                <div class="row">
+                                    <div class="col">
+                                        <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {% if forloop.counter|divisibleby:1 %}
+                    <div class="col-12 d-sm-none mb-5">
+                        <hr>
+                    </div>
+                    {% endif %}
+                    {% if forloop.counter|divisibleby:2 %}
+                    <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
+                        <hr>
+                    </div>
+                    {% endif %}
+                    {% if forloop.counter|divisibleby:3 %}
+                    <div class="col-12 d-none d-lg-block d-xl-none mb-5">
+                        <hr>
+                    </div>
+                    {% endif %}
+                    {% if forloop.counter|divisibleby:4 %}
+                    <div class="col-12 d-none d-xl-block mb-5">
+                        <hr>
+                    </div>
+                    {% endif %}
+                    {% endfor %}
                 </div>
-              </div>
             </div>
-          </div>
+            </div>
         </div>
-        {% if forloop.counter|divisibleby:1 %}
-        <div class="col-12 d-sm-none mb-5">
-          <hr>
-        </div>
-        {% endif %}
-        {% if forloop.counter|divisibleby:2 %}
-        <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
-          <hr>
-        </div>
-        {% endif %}
-        {% if forloop.counter|divisibleby:3 %}
-        <div class="col-12 d-none d-lg-block d-xl-none mb-5">
-          <hr>
-        </div>
-        {% endif %}
-        {% if forloop.counter|divisibleby:4 %}
-        <div class="col-12 d-none d-xl-block mb-5">
-          <hr>
-        </div>
-        {% endif %}
-        {% endfor %}
-      </div>
-    </div>
 
-  </div>
-  <div class="d-flex justify-content-end">
-  <div class="btt-button shadow-sm btn-dark">
-    <a class="btt-link d-flex text-white h-100 text-decoration-none">
-      <i class="fas fa-arrow-up mx-auto my-auto"></i>
-    </a>
-  </div>
-  </div>
+    </div>
+    <div class="d-flex justify-content-end">
+        <div class="btt-button shadow-sm btn-dark">
+            <a class="btt-link d-flex text-white h-100 text-decoration-none">
+                <i class="fas fa-arrow-up mx-auto my-auto"></i>
+            </a>
+        </div>
+    </div>
 </div>
 
 
@@ -203,28 +218,28 @@
 {% block postloadjs %}
 {{ block.super }}
 <script type="text/javascript">
-  $('.btt-link').click(function (e) {
-    window.scrollTo(0, 0)
-  })
-  $('#sort-selector').change(function () {
-    let selector = $(this);
-    let currentUrl = new URL(window.location);
+    $('.btt-link').click(function (e) {
+        window.scrollTo(0, 0)
+    })
+    $('#sort-selector').change(function () {
+        let selector = $(this);
+        let currentUrl = new URL(window.location);
 
-    let selectedVal = selector.val();
-    if (selectedVal != "reset") {
-      let sort = selectedVal.split("_")[0];
-      let direction = selectedVal.split("_")[1];
+        let selectedVal = selector.val();
+        if (selectedVal != "reset") {
+            let sort = selectedVal.split("_")[0];
+            let direction = selectedVal.split("_")[1];
 
-      currentUrl.searchParams.set("sort", sort);
-      currentUrl.searchParams.set("direction", direction);
+            currentUrl.searchParams.set("sort", sort);
+            currentUrl.searchParams.set("direction", direction);
 
-      window.location.replace(currentUrl);
-    } else {
-      currentUrl.searchParams.delete("sort");
-      currentUrl.searchParams.delete("direction");
+            window.location.replace(currentUrl);
+        } else {
+            currentUrl.searchParams.delete("sort");
+            currentUrl.searchParams.delete("direction");
 
-      window.location.replace(currentUrl);
-    }
-  })
+            window.location.replace(currentUrl);
+        }
+    })
 </script>
 {% endblock %}
