added add to bag functionality

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,9 +4,8 @@
 
   <div class="col-12">
     <div class="site-wide-alert alert alert-danger ">
-      <i class="fas fa-head-side-virus fa-lg"></i> Our team our commited to servicing you during this time but services
-      may
-      be impacted <a class="text-white font-weight-bold" href="{% url 'covid' %}"> Click Here For Current Covid Info</a>
+      <i class="fas fa-head-side-virus fa-lg"></i> Our team is commited to you during this pandemic but services
+      may be impacted! <a class="text-white font-weight-bold" href="{% url 'covid' %}"> Click Here For Current Covid Info</a>
 
       <button type="button" class="close text-white" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
