--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -28,7 +28,7 @@
                     <p class="mb-0">{{ product.name }}</p>
                     <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
                     <p class="mt-3">{{ product.description|linebreaks }}</p>
-                <form class="form" action="" method="POST">
+                <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
                             {% with product.has_sizes as s %}
