--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -96,15 +96,14 @@
         <div class="product-container container">
             <div class="row">
             <div class="col-10 offset-1">
-                <div class="row mt-1 mb-2"></div>
-                <div class="row">
+                <div class="row d-flex justify-content-center my-3">
 
 
                     {% for category in categories %}
                     <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                         <div class="card h-100 border-0">
                             {% if category.image1 %}
-                            <a href="">
+                            <a href="{% url 'categories' %}?category={{ category.name }}">
                                 <img class="card-img-top img-fluid" src="{{ category.image1_url }}"
                                     alt="{{ category.name }}">
                             </a>
