--- a/templates/includes/store-nav.html
+++ b/templates/includes/store-nav.html
@@ -12,7 +12,7 @@
             <form class="form" method="GET" action="{% url 'products' %}">
               <div class="input-group">
                 <input class="form-control border border-black rounded-0" type="text" name="q"
-                  placeholder="Search our site" />
+                  placeholder="Search the store..." />
                 <div class="input-group-append">
                   <button class="form-control form-control btn btn-glass border border-black rounded-0" type="submit">
                     <span class="icon">
